--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,15 +4,11 @@
     "type": "split",
     "children": [
       {
-        "id": "0eb8bb0e9a5641da",
+        "id": "1d37e9dab4210a16",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "DSA_imp/Dynamic Programming/Unique Paths 2.md",
-            "mode": "preview",
-            "source": false
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -69,7 +65,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "DSA_imp/Dynamic Programming/Unique Paths 2.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -87,17 +82,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "0eb8bb0e9a5641da",
+  "active": "bce0f4aaf0e99c8b",
   "lastOpenFiles": [
-    "DSA_imp/Dynamic Programming/Unique Paths.md",
+    "DSA_imp/Dynamic Programming/Triangle Minimum Path Sum.md",
+    "DSA_imp/Dynamic Programming/img/triangle minimum path_space_app.png",
+    "DSA_imp/Dynamic Programming/Drawing 2022-08-05 01.16.44.excalidraw.md",
     "DSA_imp/Dynamic Programming/Unique Paths 2.md",
-    "DSA_imp/Dynamic Programming/img/unique_path_2_ex2.png",
-    "DSA_imp/Dynamic Programming/img/unique_path_2_ex.png",
-    "DSA_imp/Graphs/Algorithms/Bellman_Ford_Algo(Shortest_Path_directed_negative_weight).md",
+    "DSA_imp/Dynamic Programming/Unique Paths.md",
+    "DSA_imp/Dynamic Programming/Minimum Path Sum.md",
+    "DSA_imp/Dynamic Programming/img/minimum path sum_ex1.png",
     "DSA_imp/Dynamic Programming/maximum sum of non adjacent elements.md",
-    "DSA_imp/Dynamic Programming/House Robber 2.md",
-    "DSA_imp/Dynamic Programming/frog jump.md",
-    "DSA_imp/Dynamic Programming/climbing stairs.md",
-    "DSA_imp/Dynamic Programming/img/unique paths ex1.png"
+    "DSA_imp/Dynamic Programming/Minimum number of coins.md",
+    "DSA_imp/Dynamic Programming/img/unique_path_2_ex2.png"
   ]
 }
