--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "DSA_imp/Dynamic Programming/Check subset sum equal to k.md",
+            "file": "DSA_imp/Binary Search/Longest Increasing Subsequence.md",
             "mode": "source",
             "source": false
           }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "tle",
+                "query": "subset",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": true,
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "DSA_imp/Dynamic Programming/Check subset sum equal to k.md",
+                "file": "DSA_imp/Binary Search/Longest Increasing Subsequence.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,15 +89,15 @@
   },
   "active": "ba9b0257610f071a",
   "lastOpenFiles": [
+    "DSA_imp/Dynamic Programming/Subset sum equal to k.md",
+    "DSA_imp/Dynamic Programming/Maximum Path Sum in Matrix.md",
+    "DSA_imp/Greedy/Jump Game II.md",
+    "DSA_imp/Dynamic Programming/frog jump.md",
     "DSA_imp/Recursion And Backtracking/Subset II.md",
     "DSA_imp/Dynamic Programming/Unique Paths 2.md",
     "DSA_imp/Dynamic Programming/Unique Paths.md",
     "DSA_imp/Dynamic Programming/Triangle Minimum Path Sum.md",
     "DSA_imp/Dynamic Programming/Ninjas Training 2D DP.md",
-    "DSA_imp/Dynamic Programming/minimum_cost_climbing_stairs.md",
-    "DSA_imp/Dynamic Programming/Minimum Path Sum.md",
-    "DSA_imp/Dynamic Programming/Minimum number of coins.md",
-    "DSA_imp/Dynamic Programming/maximum sum of non adjacent elements.md",
-    "DSA_imp/Dynamic Programming/Maximum Path Sum in Matrix.md"
+    "DSA_imp/Dynamic Programming/minimum_cost_climbing_stairs.md"
   ]
 }
