--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,15 +4,11 @@
     "type": "split",
     "children": [
       {
-        "id": "545d08029332d239",
+        "id": "355321c8409b846b",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "DSA_imp/Dynamic Programming/20. Minimum number of coins.md",
-            "mode": "preview",
-            "source": false
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -69,7 +65,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "DSA_imp/Dynamic Programming/20. Minimum number of coins.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -87,17 +82,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "545d08029332d239",
+  "active": "355321c8409b846b",
   "lastOpenFiles": [
-    "DSA_imp/Dynamic Programming/one_zeroes_leetcode.excalidraw.md",
-    "DSA_imp/Dynamic Programming/20. Minimum number of coins.md",
-    "DSA_imp/Dynamic Programming/Ones and Zeros leetcode.md",
-    "DSA_imp/Dynamic Programming/img/ones_zeros_leetcode_app.png",
+    "DSA_imp/Dynamic Programming/23. Unbound Knapsack.md",
+    "Untitled.md",
     "DSA_imp/Dynamic Programming/19. 0 1 Knapsack.md",
-    "DSA_imp/Dynamic Programming/17. Count Subset with sum k.md",
-    "DSA_imp/Greedy/Drawing 2022-07-25 16.28.22.excalidraw.md",
-    "DSA_imp/Dynamic Programming/16. Partition subset difference is minimum.md",
+    "DSA_imp/Dynamic Programming/22. Minimum number of coins.md",
     "DSA_imp/Dynamic Programming/15. Partition Equal Subset Sum.md",
-    "DSA_imp/Dynamic Programming/img/count_subset_with_sum_k_zero.png"
+    "DSA_imp/Dynamic Programming/17. Count Subset with sum k.md",
+    "DSA_imp/Dynamic Programming/18. Count Partition with given difference.md",
+    "DSA_imp/Dynamic Programming/16. Partition subset difference is minimum.md",
+    "DSA_imp/Dynamic Programming/Ones and Zeros leetcode.md",
+    "DSA_imp/Dynamic Programming/one_zeroes_leetcode.excalidraw.md"
   ]
 }
