--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "98ce5b4f665f59a9",
+        "id": "1bde02ac2c882186",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "DSA_imp/strings/valid_palindrome_II.cpp.md",
+            "file": "DSA_imp/Dynamic Programming/28. Longest Palindromic Subsequence.md",
             "mode": "preview",
             "source": false
           }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "tag:#dp_on_sequences",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": true,
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "DSA_imp/strings/valid_palindrome_II.cpp.md",
+                "file": "DSA_imp/Dynamic Programming/28. Longest Palindromic Subsequence.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -87,17 +87,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "98ce5b4f665f59a9",
+  "active": "1bde02ac2c882186",
   "lastOpenFiles": [
-    "DSA_imp/strings/longest_substring_without_char_repeat.md",
-    "DSA_imp/Binary Search/Painter_partition_problem.md",
-    "DSA_imp/arrays/Max Subarray Sum.md",
-    "DSA_imp/arrays/3Sum with multiplicity.md",
-    "DSA_imp/arrays/Moores_Voting_algo.md",
-    "DSA_imp/Dynamic Programming/22. Ways to make coin change.md",
-    "DSA_imp/Dynamic Programming/20.  Minimum number of coins.md",
-    "DSA_imp/Dynamic Programming/23. Unbounded  Knapsack.md",
-    "Untitled.md",
-    "DSA_imp/Dynamic Programming/19. 0 1 Knapsack.md"
+    "DSA_imp/Dynamic Programming/27. Longest Common Substring.md",
+    "DSA_imp/Dynamic Programming/img/longest_common_substring_app.png",
+    "DSA_imp/Dynamic Programming/25. Longest Common Subsequence.md",
+    "DSA_imp/Dynamic Programming/Drawing 2022-08-24 16.01.31.excalidraw.md",
+    "DSA_imp/Dynamic Programming/img/longest_common_subseq_crecursion_tree.png",
+    "DSA_imp/Dynamic Programming/24. Rod Cutting Problem.md",
+    "DSA_imp/Dynamic Programming/Ones and Zeros leetcode.md",
+    "DSA_imp/Dynamic Programming/one_zeroes_leetcode.excalidraw.md",
+    "DSA_imp/Dynamic Programming/minimum_cost_climbing_stairs.md",
+    "DSA_imp/Design/LRU Cache.md"
   ]
 }
