--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -16,5 +16,5 @@
     "margin": "0",
     "downscalePercent": 100
   },
-  "attachmentFolderPath": "DSA_imp"
+  "attachmentFolderPath": "Excalidraw"
 }
