--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "3dc81b23049d9fb6",
+        "id": "a0f2b8aaa6a69915",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Operating System/12. Convey Effect FCFS Scheduling.md",
+            "file": "Computer Networks/HTTP vs HTTPS.md",
             "mode": "preview",
             "source": false
           }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "unordered_map<int,list<int>>",
+                "query": "left view",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": true,
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Operating System/12. Convey Effect FCFS Scheduling.md",
+                "file": "Computer Networks/HTTP vs HTTPS.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -87,17 +87,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "3dc81b23049d9fb6",
+  "active": "a0f2b8aaa6a69915",
   "lastOpenFiles": [
-    "DSA_imp/Graphs/Shortest_path_in_undirected_unweight.md",
-    "DSA_imp/Dynamic Programming/15. Partition Equal Subset Sum.md",
-    "Operating System/12. Convey Effect FCFS Scheduling.md",
-    "Operating System/21. Deadlock.md",
-    "DSA_imp/Binary Tree/Maximum Width of tree.md",
-    "DSA_imp/Binary Tree/k sum paths.md",
-    "DSA_imp/Binary Tree/construct_tree_from_inorder_postorder.md",
-    "DSA_imp/Binary Tree/construct_tree_from_inorder_preorder.md",
-    "DSA_imp/Binary Tree/BT_Maximum_path_sum.md",
-    "DSA_imp/Binary Tree/boundary_traversal.md"
+    "Computer Networks/TCP_IP Model.md",
+    "Computer Networks/OSI Model.md",
+    "Computer Networks/Different types of networks.md",
+    "Computer Networks/Computer Networks.md",
+    "Computer Networks/img/tree_topology.png",
+    "Computer Networks/img/mesh_topology.png",
+    "Computer Networks/img/bus_topology.png",
+    "Computer Networks/img/ring_topology.png",
+    "DSA_imp/Binary Tree/views question/left_view.md",
+    "Computer Networks/Computer Networking Notes for Tech Placements.pdf"
   ]
 }
