--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "3dc81b23049d9fb6",
+        "id": "cb84835367076482",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Operating System/12. Convey Effect FCFS Scheduling.md",
+            "file": "DBMS/Relation Model/Convert ER To Relation Model.md",
             "mode": "preview",
             "source": false
           }
@@ -40,8 +40,8 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "unordered_map<int,list<int>>",
-                "matchingCase": false,
+                "query": "",
+                "matchingCase": true,
                 "explainSearch": false,
                 "collapseAll": true,
                 "extraContext": false,
@@ -53,7 +53,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 311.5
+    "width": 311.0121879577637
   },
   "right": {
     "id": "cf92bbfdd077108f",
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Operating System/12. Convey Effect FCFS Scheduling.md",
+                "file": "DBMS/Relation Model/Convert ER To Relation Model.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -87,17 +87,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "3dc81b23049d9fb6",
+  "active": "cb84835367076482",
   "lastOpenFiles": [
-    "DSA_imp/Graphs/Shortest_path_in_undirected_unweight.md",
-    "DSA_imp/Dynamic Programming/15. Partition Equal Subset Sum.md",
-    "Operating System/12. Convey Effect FCFS Scheduling.md",
-    "Operating System/21. Deadlock.md",
-    "DSA_imp/Binary Tree/Maximum Width of tree.md",
-    "DSA_imp/Binary Tree/k sum paths.md",
-    "DSA_imp/Binary Tree/construct_tree_from_inorder_postorder.md",
-    "DSA_imp/Binary Tree/construct_tree_from_inorder_preorder.md",
-    "DSA_imp/Binary Tree/BT_Maximum_path_sum.md",
-    "DSA_imp/Binary Tree/boundary_traversal.md"
+    "DBMS/Relation Model/Relation Model Slides.pdf",
+    "DBMS/Relation Model/Relation Model Notes.pdf",
+    "DBMS/Relation Model/Relation Model.md",
+    "Interview Important/Projects.md",
+    "DBMS/Formulate ER Diagram (Banking System).md",
+    "DBMS/Babbar_Notes/complete_sql_notes.pdf",
+    "DBMS/Difference between NOSQL and SQL.md",
+    "Computer Networks/img/smtp_pop_desc.png",
+    "Computer Networks/OSI Model.md",
+    "Computer Networks/img/ftp_desc.png"
   ]
 }
