--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -16,5 +16,6 @@
     "margin": "0",
     "downscalePercent": 100
   },
-  "attachmentFolderPath": "/"
+  "attachmentFolderPath": "/",
+  "showInlineTitle": false
 }
